Added contributors & links between pages

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ function onPlayVideoClick(e) {
 			</div>
 			<div class="container footer">
 				<a href="//github.com/dutzi/tamper">Github Page</a>
+				<a href="releasenotes.html">Release Notes</a>
 			</div>
 		</div>
 	</body>
