--- a/releasenotes.html
+++ b/releasenotes.html
@@ -20,7 +20,7 @@ h4 {
 		<div>
 			<div class="container">
 				<div class="logo-container">
-					<img src="images/logo.png" srcset="images/logo.png 1x, images/logo@2x.png 2x">
+					<a href="index.html"><img src="images/logo.png" srcset="images/logo.png 1x, images/logo@2x.png 2x"></a>
 				</div>
 				<p>To complete Tamper's installation please update its python script:</p>
 				<pre><span class="prompt"></span>pip install tamper --upgrade<br/></pre>
@@ -33,6 +33,19 @@ h4 {
 						<li>Fixed a bug preventing Tamper from running on Windows</li>
 						<li>Fixed a lot of other bugs</li>
 					</ul>
+					<p>
+						<span>Contributors who helped with this release:</span>
+						<span>
+							<a href="https://github.com/mhils">mhils</a>,
+							<a href="https://github.com/dscoleman">dscoleman</a>,
+							<a href="https://github.com/th3m4ri0">th3m4ri0</a>,
+							<a href="https://github.com/SgtPooki">SgtPooki</a>,
+							<a href="https://github.com/Ncage1974">Ncage1974</a>,
+							<a href="https://github.com/grishanin">grishanin</a>,
+							<a href="https://github.com/Ridermansb">Ridermansb</a>,
+							<a href="https://github.com/luanvuvt">luanvuvt</a>
+						</span>
+					</p>
 				</ul>
 			</div>
 		</div>
