Updated release notes

--- a/releasenotes.html
+++ b/releasenotes.html
@@ -30,6 +30,8 @@ h4 {
 					<p>Changes:</p>
 					<ul>
 						<li>Migrated code to AngularJS</li>
+						<li>Added panel for network request</li>
+						<li>Added support for asterisks in url</li>
 						<li>Fixed a bug preventing Tamper from running on Windows</li>
 						<li>Fixed a lot of other bugs</li>
 					</ul>
