--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -28,7 +28,7 @@
 				<div class="property property-inline">
 					<div class="label">
 						<div class="label-text">Editor Command Line</div>
-						<div class="tooltip">The command line used to open the editor, $1 will be replaced with the file's name (for example <span ng-show="isOSX">`subl`</span><span ng-show="isWindows">`C:\Program Files (x86)\Notepad++\notepad++.exe`</span>)</div>
+						<div class="tooltip">The command line used to open the editor (for example <span ng-show="isOSX">`subl`</span><span ng-show="isWindows">`C:\Program Files (x86)\Notepad++\notepad++.exe`</span>)</div>
 					</div>
 					<div class="value">
 						<input id="txtEditorCommand" ng-model="settings.editorCommandLine" type="text">
