--- a/index.html
+++ b/index.html
@@ -97,12 +97,10 @@ function onPlayVideoClick(e) {
 						<h3>How do I use Tamper?</h3>
 						<p>Once installed, Tamper will add a new panel to your devtools, the "Tamper" panel. Similar to the Network panel, the Tamper panel shows you a list of all requests made by this page. Click on one of these network requests and the response Chrome got will open in your default editor. Make the changes you need and save the file. Once you hit refresh, Tamper will serve Chrome the file you just saved.</p>
 						<h3>Installing</h3>
-						<p>Tamper is based on the awesome <a href="http://mitmproxy.org/">mitmproxy</a> (man-in-the-middle proxy), or more precisely, libmproxy, its companion library that allows implementing powerful interception proxies. The latest release of Mitmproxy is 0.10, but some of the features Tamper uses will only be released in 0.11 (which should be released in the coming days). Due to this, installing Tamper might be a bit complex.</p>
-						<p>1. Install mitmproxy-0.11-latest from the master</p>
-						<pre><span class="prompt"></span>git clone https://github.com/mitmproxy/mitmproxy.git<br/><span class="prompt"></span>cd mitmproxy<br/><span class="prompt"></span>pip install --src . -r requirements.txt</pre>
-						<p>2. Install Tamper's python script</p>
+						<p>Tamper is based on the awesome <a href="http://mitmproxy.org/">mitmproxy</a> (man-in-the-middle proxy), or more precisely, libmproxy, its companion library that allows implementing powerful interception proxies.</p>
+						<p>1. Install Tamper's python script</p>
 						<pre><span class="prompt"></span>pip install tamper</pre>
-						<p>3. Install <a href="https://chrome.google.com/webstore/detail/tamper/mabhojhgigkmnkppkncbkblecnnanfmd" target="_blank">Tamper's devtools extension</a></p>
+						<p>2. Install <a href="https://chrome.google.com/webstore/detail/tamper/mabhojhgigkmnkppkncbkblecnnanfmd" target="_blank">Tamper's devtools extension</a></p>
 					</div>
 				</div>
 			</div>
