Better error handling

--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -99,7 +99,7 @@
 
 			<!-- Network -->
 			<div class="right-pane vbox">
-				<div class="error-message">Could not connect to proxy (<a target="_blank" href="http://dutzi.github.io/tamper/#proxy-connection-error">help</a>)</div>
+				<div class="error-message">Could not connect to proxy (<a target="_blank" href="http://dutzi.github.io/tamper/#proxy-connection-error-{{errorCode}}">help</a>)</div>
 				<div ng-hide="selectedRuleIndex != -1" class="vbox">
 					<div class="toolbar">
 						<span class="label">Filter:</span>
