--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function onPlayVideoClick(e) {
 						<div class="description">
 							<img src="images/description.png" srcset="images/description.png 1x, images/description@2x.png 2x">
 						</div>
-						<div class="install-btn" onclick="onInstallClick()">Install</div>
+						<button class="install-btn" onclick="onInstallClick()">Install</button>
 					</div>
 					<div class="col-lg-8 col-md-7 col-sm-12 hero-container" onclick="onPlayVideoClick(event)">
 						<div class="video-container-outer">
