--- a/chrome-extension/app/panel.html
+++ b/chrome-extension/app/panel.html
@@ -1,197 +1,319 @@
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app="tamper">
-	<head>
-		<!-- build:css styles/vendor.css -->
-		<!-- bower:css -->
-		<!-- endbower -->
-		<!-- endbuild -->
-		<!-- build:css styles/main.css -->
-		<link href="styles/main.css" rel="stylesheet">
-		<!-- endbuild -->
-	</head>
-	<body ng-cloak
-		ng-controller="PanelCtrl"
-		ng-keydown="onBodyKeyDown($event)"
-		ng-class="{
+  <head>
+    <!-- build:css styles/vendor.css -->
+    <!-- bower:css -->
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:css styles/main.css -->
+    <link href="styles/main.css" rel="stylesheet" />
+    <!-- endbuild -->
+  </head>
+  <body
+    ng-cloak
+    ng-controller="PanelCtrl"
+    ng-keydown="onBodyKeyDown($event)"
+    ng-class="{
 			'proxy-connection-error': proxyState !== proxyStates.PROXY_STARTED,
 			'proxy-port-error': proxyState === proxyStates.PROXY_COULD_NOT_START_PORT_ERROR,
 			'proxy-libs-error': proxyState === proxyStates.PROXY_COULD_NOT_START_LIBS_ERROR,
 			'os-osx': isOSX,
 			'os-windows': isWindows,
 			'resizing': isResizing
-		}">
-		<!-- Settings -->
-		<div id="settings" ng-show="isShowingSettings">
-			<div class="close-button" ng-click="closeSettings()"></div>
-			<div class="header">Tamper Settings</div>
-			<div class="properties">
-				<div class="property property-inline">
-					<div class="label">
-						<div class="label-text">Editor Command Line</div>
-						<div class="tooltip">The command line used to open the editor (for example <span ng-show="isOSX">`/usr/local/bin/subl`</span><span ng-show="isWindows">`C:\Program Files (x86)\Notepad++\notepad++.exe`</span>)</div>
-					</div>
-					<div class="value">
-						<input id="txtEditorCommand" ng-model="settings.editorCommandLine" type="text">
-						<div style="margin-top:8px"><button class="text-button" ng-click="testEditorCommandLine()">Test Command</button></div>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="property property-inline">
-					<div class="label">
-						<div class="label-text">PAC File</div>
-						<div class="tooltip">This PAC file will be used by Chrome. PAC files are useful when you want some requests to go to other proxies. Read more about PAC file <a href="http://en.wikipedia.org/wiki/Proxy_auto-config" target="_blank">here</a>.</div>
-					</div>
-					<div class="value"><textarea id="txtPACFile" ng-model="settings.pacScript"></textarea></div>
-					<div class="clearfix"></div>
-				</div>
-				<div class="property property-inline">
-					<div class="label">
-						<div class="label-text">Proxy Port</div>
-					</div>
-					<div class="value">
-						<input id="txtProxyPort" ng-model="settings.proxyPort" type="text">
-						<div style="margin-top: 8px;">
-							<button class="text-button" ng-click="restartProxy()">Restart Proxy</button>
-							<span ng-show="settings.hasProxyRestarted" class="proxy-restarted-notification">&#10003; Proxy Restarted</span>
-						</div>
-					</div>
-					<div class="proxy-port-error-message" ng-show="proxyState === proxyStates.PROXY_COULD_NOT_START_PORT_ERROR">Proxy server could not start because the port is alreday taken by another service. Choose a different port and restart the server to fix this.</div>
-					<div class="clearfix"></div>
-				</div>
-				<a id="btnRestoreDefaults" class="button" href="#" ng-click="onRestoreDefaults()">Restore Defaults</a>
-			</div>
-		</div>
+		}"
+  >
+    <!-- Settings -->
+    <div id="settings" ng-show="isShowingSettings">
+      <div class="close-button" ng-click="closeSettings()"></div>
+      <div class="header">Tamper Settings</div>
+      <div class="properties">
+        <div class="property property-inline">
+          <div class="label">
+            <div class="label-text">Editor Command Line</div>
+            <div class="tooltip">
+              The command line used to open the editor (for example
+              <span ng-show="isOSX">`/usr/local/bin/subl`</span
+              ><span ng-show="isWindows"
+                >`C:\Program Files (x86)\Notepad++\notepad++.exe`</span
+              >)
+            </div>
+          </div>
+          <div class="value">
+            <input
+              id="txtEditorCommand"
+              ng-model="settings.editorCommandLine"
+              type="text"
+            />
+            <div style="margin-top:8px">
+              <button class="text-button" ng-click="testEditorCommandLine()">
+                Test Command
+              </button>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="property property-inline">
+          <div class="label">
+            <div class="label-text">PAC File</div>
+            <div class="tooltip">
+              This PAC file will be used by Chrome. PAC files are useful when
+              you want some requests to go to other proxies. Read more about PAC
+              file
+              <a
+                href="http://en.wikipedia.org/wiki/Proxy_auto-config"
+                target="_blank"
+                >here</a
+              >.
+            </div>
+          </div>
+          <div class="value">
+            <textarea id="txtPACFile" ng-model="settings.pacScript"></textarea>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="property property-inline">
+          <div class="label">
+            <div class="label-text">Proxy Port</div>
+          </div>
+          <div class="value">
+            <input
+              id="txtProxyPort"
+              ng-model="settings.proxyPort"
+              type="text"
+            />
+            <div style="margin-top: 8px;">
+              <button class="text-button" ng-click="restartProxy()">
+                Restart Proxy
+              </button>
+              <span
+                ng-show="settings.hasProxyRestarted"
+                class="proxy-restarted-notification"
+                >&#10003; Proxy Restarted</span
+              >
+            </div>
+          </div>
+          <div
+            class="proxy-port-error-message"
+            ng-show="proxyState === proxyStates.PROXY_COULD_NOT_START_PORT_ERROR"
+          >
+            Proxy server could not start because the port is alreday taken by
+            another service. Choose a different port and restart the server to
+            fix this.
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <a
+          id="btnRestoreDefaults"
+          class="button"
+          href="#"
+          ng-click="onRestoreDefaults()"
+          >Restore Defaults</a
+        >
+      </div>
+    </div>
 
-		<div class="split-view hbox view">
-			<div class="split-view-resizer"
-				ng-mousedown="onResizeMouseDown($event)"
-				ng-style="{'left': sidebarWidth + 'px'}"></div>
+    <div class="split-view hbox view">
+      <div
+        class="split-view-resizer"
+        ng-mousedown="onResizeMouseDown($event)"
+        ng-style="{'left': sidebarWidth + 'px'}"
+      ></div>
 
-			<!-- Sidebar -->
-			<div id="sidebar" class="vbox" ng-style="{'width': sidebarWidth + 'px'}">
-				<div class="sidebar-list">
+      <!-- Sidebar -->
+      <div id="sidebar" class="vbox" ng-style="{'width': sidebarWidth + 'px'}">
+        <div class="sidebar-list">
+          <div
+            class="sidebar-list-item sidebar-list-item-big"
+            ng-class="{selected: selectedRuleIndex == -1}"
+            ng-click="selectedRuleIndex = -1"
+          >
+            Network
+          </div>
 
-					<div class="sidebar-list-item sidebar-list-item-big"
-						ng-class="{selected: selectedRuleIndex == -1}"
-						ng-click="selectedRuleIndex = -1">Network</div>
+          <div class="sidebar-list-header">RULES</div>
 
-					<div class="sidebar-list-header">RULES</div>
+          <div id="rulesList">
+            <div
+              ng-repeat="rule in proxyRules track by $index"
+              class="rules-list-item sidebar-list-item"
+              ng-class="{selected: selectedRuleIndex == $index}"
+            >
+              <div class="sidebar-list-item-checkbox">
+                <input type="checkbox" ng-model="rule.isEnabled" />
+              </div>
+              <div
+                class="sidebar-list-item-data"
+                ng-click="onRuleListItemClick($index)"
+              >
+                <div class="sidebar-list-item-title">
+                  {{ rule.url | getFilename }}
+                </div>
+                <div class="sidebar-list-item-subtitle">
+                  {{ rule.url | getPath }}
+                </div>
+              </div>
+              <div class="spacer"></div>
+              <div
+                class="sidebar-list-item-delete"
+                ng-click="onDeleteRuleClick(rule)"
+              ></div>
+            </div>
+          </div>
+        </div>
+        <div class="bottom-bar">
+          <div class="settings-button" ng-click="showSettings()"></div>
+        </div>
+      </div>
 
-					<div id="rulesList">
-						<div ng-repeat="rule in proxyRules track by $index"
-							class="rules-list-item sidebar-list-item"
-							ng-class="{selected: selectedRuleIndex == $index}">
-							<div class="sidebar-list-item-checkbox">
-								<input type="checkbox" ng-model="rule.isEnabled">
-							</div>
-							<div class="sidebar-list-item-data" ng-click="onRuleListItemClick($index)">
-								<div class="sidebar-list-item-title">{{ rule.url | getFilename }}</div>
-								<div class="sidebar-list-item-subtitle">{{ rule.url | getPath }}</div>
-							</div>
-							<div class="spacer"></div>
-							<div class="sidebar-list-item-delete" ng-click="onDeleteRuleClick(rule)"></div>
-						</div>
-					</div>
+      <!-- Network -->
+      <div
+        class="right-pane vbox"
+        ng-style="{'width': 'calc(100vw - ' + sidebarWidth + 'px)'}"
+      >
+        <div class="error-message">
+          Could not connect to proxy (<a
+            target="_blank"
+            href="http://dutzi.github.io/tamper/#proxy-connection-error-{{
+              errorCode
+            }}"
+            >help</a
+          >)
+        </div>
+        <div ng-hide="selectedRuleIndex != -1" class="vbox">
+          <div class="toolbar">
+            <span class="label">Filter:</span>
+            <input
+              type="text"
+              ng-model="requestFilter.url"
+              focus-on="focusFilter"
+            />
+            <span class="spacer"></span>
+            <span
+              class="toggle-proxy"
+              ng-click="onToggleProxy(event)"
+              ng-class="{'proxy-enabled': isProxyEnabled}"
+            >
+              <span class="dot">&#8226;</span>
+              <span ng-show="isProxyEnabled">Enabled</span>
+              <span ng-hide="isProxyEnabled">Disabled</span>
+            </span>
+            <a
+              href="http://dutzi.github.io/tamper/releasenotes.html"
+              target="_blank"
+              ng-show="updateAvailable"
+              class="update-button"
+              >Update Available</a
+            >
+          </div>
+          <div id="requestsContainer" class="vbox">
+            <div
+              class="request-item"
+              ng-repeat="request in requests | filter:requestFilter"
+              ng-class="{'request-item-error': request.error, 'request-item-removed': request.isRemoved}"
+            >
+              <span
+                ng-show="request.isModified"
+                class="request-item-modified-badge"
+                >Modified</span
+              >
+              <a
+                class="request-item-link"
+                href="#"
+                ng-click="onQuickEditClick(request, $event)"
+                title="{{ request.url }}"
+                >{{ request.url | getFilename }}
+                <span ng-if="request.error"> ({{ request.error }})</span></a
+              >
+              <span class="request-item-actions">
+                <span
+                  class="request-item-action-button request-item-loading-spinner"
+                  ng-show="request.isLoading"
+                  >Loading...</span
+                >
+                <a
+                  href="#"
+                  class="request-item-action-button request-item-discard-changes"
+                  ng-show="request.isModified"
+                  ng-click="onDiscardChangesClick(request, event)"
+                  >Delete</a
+                >
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="network-request-data" ng-show="selectedRuleIndex != -1">
+          <div class="property property-inline">
+            <label>
+              <div class="label-text">URL</div>
+              <div class="tooltip">You can use asterisks (*) as wildcards.</div>
+            </label>
+            <div class="value">
+              <input
+                ng-model-options="{updateOn: 'blur'}"
+                ng-model="proxyRules[selectedRuleIndex].url"
+              />
+            </div>
+            <div class="clearfix"></div>
+          </div>
+          <div class="property property-inline">
+            <label>Cached File Name</label>
+            <div class="value">
+              <input
+                ng-model="proxyRules[selectedRuleIndex].cachedFilename"
+                disabled
+              />
+            </div>
+            <div class="clearfix"></div>
+          </div>
+          <div class="property property-inline">
+            <label>&nbsp;</label>
+            <div class="value">
+              <button
+                class="text-button"
+                ng-click="openFile(proxyRules[selectedRuleIndex])"
+              >
+                Open File
+              </button>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+          <div class="property">
+            <label>Response Headers</label>
+            <div class="value">
+              <table>
+                <tbody>
+                  <tr
+                    ng-repeat="requestHeader in proxyRules[selectedRuleIndex].responseHeaders track by $index"
+                  >
+                    <td style="min-width:100px">{{ requestHeader.name }}</td>
+                    <td>{{ requestHeader.value }}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-				</div>
-				<div class="bottom-bar"><div class="settings-button" ng-click="showSettings()"></div></div>
-			</div>
+    <!-- build:js scripts/vendor.js -->
+    <!-- bower:js -->
+    <script src="bower_components/q/q.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
+    <!-- endbower -->
+    <!-- endbuild -->
 
-			<!-- Network -->
-			<div class="right-pane vbox">
-				<div class="error-message">Could not connect to proxy (<a target="_blank" href="http://dutzi.github.io/tamper/#proxy-connection-error-{{errorCode}}">help</a>)</div>
-				<div ng-hide="selectedRuleIndex != -1" class="vbox">
-					<div class="toolbar">
-						<span class="label">Filter:</span>
-						<input type="text" ng-model="requestFilter.url" focus-on="focusFilter"/>
-						<span class="spacer"></span>
-						<span class="toggle-proxy" ng-click="onToggleProxy(event)" ng-class="{'proxy-enabled': isProxyEnabled}">
-							<span class="dot">&#8226;</span>
-							<span ng-show="isProxyEnabled">Enabled</span>
-							<span ng-hide="isProxyEnabled">Disabled</span>
-						</span>
-						<a href="http://dutzi.github.io/tamper/releasenotes.html" target="_blank" ng-show="updateAvailable" class="update-button">Update Available</a>
-					</div>
-					<div id="requestsContainer" class="vbox">
-
-						<div class="request-item"
-							ng-repeat="request in requests | filter:requestFilter"
-							ng-class="{'request-item-error': request.error, 'request-item-removed': request.isRemoved}">
-							<span ng-show="request.isModified" class="request-item-modified-badge">Modified</span>
-							<a class="request-item-link"
-								href="#"
-								ng-click="onQuickEditClick(request, $event)"
-								title="{{request.url}}">{{request.url | getFilename }} <span ng-if="request.error"> ({{request.error}})</span></a>
-							<span class="request-item-actions">
-								<span class="request-item-action-button request-item-loading-spinner"
-									ng-show="request.isLoading">Loading...</span>
-								<a href="#"
-									class="request-item-action-button request-item-discard-changes"
-									ng-show="request.isModified"
-									ng-click="onDiscardChangesClick(request, event)">Delete</a>
-							</span>
-						</div>
-
-					</div>
-				</div>
-				<div class="network-request-data" ng-show="selectedRuleIndex != -1">
-					<div class="property property-inline">
-						<label>
-							<div class="label-text">URL</div>
-							<div class="tooltip">You can use asterisks (*) as wildcards.</div>
-						</label>
-						<div class="value">
-							<input ng-model-options="{updateOn: 'blur'}"
-								ng-model="proxyRules[selectedRuleIndex].url">
-						</div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="property property-inline">
-						<label>Cached File Name</label>
-						<div class="value"><input ng-model="proxyRules[selectedRuleIndex].cachedFilename" disabled></div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="property property-inline">
-						<label>&nbsp;</label>
-						<div class="value"><button class="text-button" ng-click="openFile(proxyRules[selectedRuleIndex])">Open File</button></div>
-						<div class="clearfix"></div>
-					</div>
-					<div class="property">
-						<label>Response Headers</label>
-						<div class="value">
-							<table>
-								<tbody>
-									<tr ng-repeat="requestHeader in proxyRules[selectedRuleIndex].responseHeaders track by $index">
-										<td style="min-width:100px">{{requestHeader.name}}</td>
-										<td>{{requestHeader.value}}</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-			</div>
-
-		</div>
-
-		<!-- build:js scripts/vendor.js -->
-		<!-- bower:js -->
-		<script src="bower_components/q/q.js"></script>
-		<script src="bower_components/angular/angular.js"></script>
-		<!-- endbower -->
-		<!-- endbuild -->
-
-		<!-- build:js scripts/panel.js -->
-		<script src="scripts/mimetypes.js"></script>
-		<!-- <script src="scripts/panel.js"></script> -->
-		<script src="scripts/app.js"></script>
-		<script src="scripts/filters/filters.js"></script>
-		<script src="scripts/controllers/PanelCtrl.js"></script>
-		<script src="scripts/services/ProxyService.js"></script>
-		<script src="scripts/services/MimeTypesService.js"></script>
-		<script src="scripts/services/FocusService.js"></script>
-		<script src="scripts/directives/focusOn.js"></script>
-		<!-- endbuild -->
-	</body>
+    <!-- build:js scripts/panel.js -->
+    <script src="scripts/mimetypes.js"></script>
+    <!-- <script src="scripts/panel.js"></script> -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/filters/filters.js"></script>
+    <script src="scripts/controllers/PanelCtrl.js"></script>
+    <script src="scripts/services/ProxyService.js"></script>
+    <script src="scripts/services/MimeTypesService.js"></script>
+    <script src="scripts/services/FocusService.js"></script>
+    <script src="scripts/directives/focusOn.js"></script>
+    <!-- endbuild -->
+  </body>
 </html>
